--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="about me">
         <div class="container">
             <div class="row">
-                <img src="img/main.jpeg" class="img-responsive" alt="" style="margin-left: auto; margin-right:auto; marin-bottom:50px">
+                <img src="img/main.jpeg" class="img-responsive" alt="" style="margin-left: auto; margin-right:auto; marin-bottom:50p">
                 <div class="col-lg-12 text-center">
                     
                     <h2 class="section-heading">이재홍</h2>
